<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@drawable/bg_gradient">
    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_name"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/date_time"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="211dp">

            <TextView
                android:id="@+id/temperatureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="67sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center"
                android:text="@string/temperature_num"/>

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/weather_type"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/feellike"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/feel_like"/>

                    <TextView
                        android:id="@+id/feelLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:text="@string/feel_like_num"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/visibility"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>

                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/visibilty"/>

                    <TextView
                        android:id="@+id/visiblity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:text="@string/visibilty_num"/>

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/wind"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/wind"/>

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:text="@string/wind_num"/>

                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/pressure"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/pressure"/>

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:text="@string/pressure_num"/>

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/humidity"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/humidity"/>

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:text="@string/humidity_num"/>

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/info"
                        app:tint="#FFFFFF" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/created_by"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:text="@string/author"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_Animation"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginTop="111dp"
        app:lottie_rawRes="@raw/cloud"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        />

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/dot32"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forecast_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="359dp"/>

</RelativeLayout>
